# SLAM-RGBD

./: CMakeLists.txt  main.cpp  readme.md
data/: compareOfoptimize.txt  debug.txt  resultOfoptimize.txt  resultOfpnp.txt  result_after.g2o  result_before.g2o
include/: slamBase.h
src/: detectFeatures.cpp  generatePointCloud.cpp  joinPointCloud.cpp  parameters.yaml  slam.cpp  slamBase.cpp  slamEnd.cpp  visualOdometry.cpp
